# minato-lite

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
