[package]
name = "minato-lite"
version = "0.1.0"
edition = "2021"
authors = ["MiraiSubject <>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
base64 = "0.21.0"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.160", features = ["serde_derive"] }
